plugins/kotlin/idea/tests/testData/checker/regression/AnnotationOnNamedParameterOfFunctionType.fir.kt
fun <K, V> intercept(block: (@<error descr="[UNRESOLVED_REFERENCE]">A</error> key: K, (K) -> V) -> V) {

}
